--- a/config/index.html
+++ b/config/index.html
@@ -10,7 +10,7 @@
                 required: true
             },
             host: {
-                value: "app.posthog.com",
+                value: "https://app.posthog.com",
                 required: true,
             }
         },
